--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Game design 3 concept 4/Library/PackageCache/com.unity.toolchain.win-x86_64-linux-x86_64@2.0.0/data~/payload.tar.7z
